# Fast_API_SqlAlchemy_Fast_UI

./: .gitignore  README.md  index.md  main_all.py  pydandic_.ipynb  pyproject.toml  requirement.txt  sqlalchemy_.ipynb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dependabot.yml  python-app.yml  unittest.yml
src/app/: database.py  db.py  dependencies.py  main.py  main_api.py  main_ui.py  models.py  schemas.py
src/cli/: req.py
src/data/: test.db
tests/: test_app.py
